--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-    "main": "./integration.js",
-    "name": "Gigamon",
-    "version": "3.0.2-beta",
-    "private": true,
-    "dependencies": {
-      "request": "^2.88.0",
-      "async": "^3.1.0",
-      "lodash": "^4.17.15"
-    }
+  "main": "./integration.js",
+  "name": "gigamon",
+  "version": "3.0.0-beta",
+  "private": true,
+  "dependencies": {
+    "request": "^2.88.0",
+    "async": "^3.1.0",
+    "lodash": "^4.17.15"
   }
+}
