--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "version": "3.0.0-beta",
   "private": true,
   "dependencies": {
-    "request": "^2.88.0",
     "async": "^3.1.0",
-    "lodash": "^4.17.15"
+    "lodash": "^4.17.15",
+    "moment": "^2.24.0",
+    "request": "^2.88.0"
   }
 }
