chore: Added package-lock.json & Updated to postman-request & Added defaultColor to config files

--- a/config/config.json
+++ b/config/config.json
@@ -2,13 +2,9 @@
   "name": "Gigamon ThreatINSIGHT",
   "acronym": "GIG",
   "description": "Performs IP and domain lookups against Gigamon Insights Detection and Entity endpoints",
-  "entityTypes": [
-    "IPv4",
-    "domain"
-  ],
-  "styles": [
-    "./styles/gig.less"
-  ],
+  "entityTypes": ["IPv4", "domain"],
+  "defaultColor": "light-pink",
+  "styles": ["./styles/gig.less"],
   "block": {
     "component": {
       "file": "./component/block.js"
